--- a/egypt/index.html
+++ b/egypt/index.html
@@ -502,7 +502,7 @@ footer {
         <!-- Product 2 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/bango.png" alt="Bango (بانجو)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/bango.png" alt="Bango (بانجو)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Bango (بانجو)</a>
             <p class="price">400 EGP</p>
@@ -512,7 +512,7 @@ footer {
         <!-- Product 3 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Marijuana.png" alt="Marijuana (ماريجوانا)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Marijuana.png" alt="Marijuana (ماريجوانا)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Marijuana (ماريجوانا)</a>
             <p class="price">150 EGP</p>
@@ -522,7 +522,7 @@ footer {
         <!-- Product 4 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Heroin.png" alt="Heroin (هيروين)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Heroin.png" alt="Heroin (هيروين)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Heroin (هيروين)</a>
             <p class="price">180 EGP</p>
@@ -532,7 +532,7 @@ footer {
         <!-- Product 5 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Cocaine.png" alt="Cocaine (كوكايين)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Cocaine.png" alt="Cocaine (كوكايين)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1"class="product-title">Cocaine (كوكايين)</a>
             <p class="price">320 EGP</p>
@@ -542,7 +542,7 @@ footer {
         <!-- Product 6 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Crystal Meth.png" alt="Crystal Meth (كريستال ميث / آيس)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Crystal Meth.png" alt="Crystal Meth (كريستال ميث / آيس)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Crystal Meth (كريستال ميث / آيس)</a>
             <p class="price">275 EGP</p>
@@ -552,7 +552,7 @@ footer {
         <!-- Product 7 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/blotter paper.png" alt="LSD Blotter Paper (ورق)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/blotter paper.png" alt="LSD Blotter Paper (ورق)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">LSD Blotter Paper (ورق)</a>
             <p class="price">195 EGP</p>
@@ -562,7 +562,7 @@ footer {
         <!-- Product 8 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/LSD Liquid.jpeg" alt="LSD Liquid (سائل LSD)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/LSD Liquid.jpeg" alt="LSD Liquid (سائل LSD)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">LSD Liquid (سائل LSD)</a>
             <p class="price">350 EGP</p>
@@ -572,7 +572,7 @@ footer {
         <!-- Product 9 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Magic Mushroom.png" alt="Magic Mushroom (فطر سحري)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Magic Mushroom.png" alt="Magic Mushroom (فطر سحري)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Magic Mushroom (فطر سحري)</a>
             <p class="price">220 EGP</p>
@@ -582,7 +582,7 @@ footer {
         <!-- Product 10 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Ecstasy.png" alt="Ecstasy (إكستاسي ) – MDMA pills" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Ecstasy.png" alt="Ecstasy (إكستاسي ) – MDMA pills" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Ecstasy (إكستاسي ) – MDMA pills</a>
             <p class="price">290 EGP</p>
@@ -592,7 +592,7 @@ footer {
         <!-- Product 11 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Tramadol.png" alt="Tramadol (ترامادول)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Tramadol.png" alt="Tramadol (ترامادول)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Tramadol (ترامادول)</a>
             <p class="price">380 EGP</p>
@@ -602,7 +602,7 @@ footer {
         <!-- Product 12 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Captagon.png" alt="Captagon (كبتاجون)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Captagon.png" alt="Captagon (كبتاجون)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Captagon (كبتاجون)</a>
             <p class="price">260 EGP</p>
@@ -612,7 +612,7 @@ footer {
         <!-- Product 13 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Ketamine.png" alt="Ketamine (كيتامين" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Ketamine.png" alt="Ketamine (كيتامين" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Ketamine (كيتامين</a>
             <p class="price">310 EGP</p>
@@ -622,7 +622,7 @@ footer {
         <!-- Product 14 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Opium.png" alt="Opium (أفيون)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Opium.png" alt="Opium (أفيون)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Opium (أفيون)</a>
             <p class="price">240 EGP</p>
@@ -632,7 +632,7 @@ footer {
         <!-- Product 15 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Morphine.jpeg" alt="Morphine (مورفين)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Morphine.jpeg" alt="Morphine (مورفين)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Morphine (مورفين)</a>
             <p class="price">420 EGP</p>
@@ -642,7 +642,7 @@ footer {
         <!-- Product 16 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/egypt/Lyrica.jpeg" alt="Lyrica ( ليريكا)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Lyrica.jpeg" alt="Lyrica ( ليريكا)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Lyrica ( ليريكا)</a>
             <p class="price">280 EGP</p>
