--- a/index.html
+++ b/index.html
@@ -1042,42 +1042,42 @@
                         <span class="english-name">Egypt</span>
                     </div>
                 </a>
-                <a href="zzzzzzzzz" class="country-card" target="_blank">
+                <a href="https://mohameddrugs.shop/UAE" class="country-card" target="_blank">
                     <img src="https://flagcdn.com/w40/ae.png" alt="UAE" />
                     <div class="country-name">
                         <span class="arabic-name">الإمارات</span>
                         <span class="english-name">UAE</span>
                     </div>
                 </a>
-                <a href="/shop/saudi" class="country-card" target="_blank">
+                <a href="https://mohameddrugs.shop/Saudi Arabia" class="country-card" target="_blank">
                     <img src="https://flagcdn.com/w40/sa.png" alt="Saudi Arabia" />
                     <div class="country-name">
                         <span class="arabic-name">السعودية</span>
                         <span class="english-name">Saudi Arabia</span>
                     </div>
                 </a>
-                <a href="/shop/qatar" class="country-card" target="_blank">
+                <a href="https://mohameddrugs.shop/Qatar" class="country-card" target="_blank">
                     <img src="https://flagcdn.com/w40/qa.png" alt="Qatar" />
                     <div class="country-name">
                         <span class="arabic-name">قطر</span>
                         <span class="english-name">Qatar</span>
                     </div>
                 </a>
-                <a href="/shop/kuwait" class="country-card" target="_blank">
+                <a href="https://mohameddrugs.shop/Kuwait" class="country-card" target="_blank">
                     <img src="https://flagcdn.com/w40/kw.png" alt="Kuwait" />
                     <div class="country-name">
                         <span class="arabic-name">الكويت</span>
                         <span class="english-name">Kuwait</span>
                     </div>
                 </a>
-                <a href="/shop/oman" class="country-card" target="_blank">
+                <a href="https://mohameddrugs.shop/Oman" class="country-card" target="_blank">
                     <img src="https://flagcdn.com/w40/om.png" alt="Oman" />
                     <div class="country-name">
                         <span class="arabic-name">عمان</span>
                         <span class="english-name">Oman</span>
                     </div>
                 </a>
-                <a href="/shop/bahrain" class="country-card" target="_blank">
+                <a href="https://mohameddrugs.shop/Bahrain" class="country-card" target="_blank">
                     <img src="https://flagcdn.com/w40/bh.png" alt="Bahrain" />
                     <div class="country-name">
                         <span class="arabic-name">البحرين</span>
