--- a/egypt/index.html
+++ b/egypt/index.html
@@ -651,7 +651,9 @@ footer {
     </div>
     
     <!-- Check Customer Reviews Button -->
-    <a href="reviews.html" class="check-reviews">Check Customer Reviews<span class="arabic">تحقق من آراء العملاء</span></a>
+    <a href="index.html#submit-review" class="check-reviews">
+  Check Customer Reviews <span class="arabic">تحقق من آراء العملاء</span>
+</a>
 </div>
 
 <!-- Footer -->
