--- a/egypt/index.html
+++ b/egypt/index.html
@@ -648,12 +648,12 @@ footer {
             <p class="price">280 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
+       
         <div>
-        <!-- Check Customer Reviews Button -->
-<a href="index.html#submit-review" class="check-reviews">
+        <a href="/#customer-comments" class="check-reviews">
   Check Customer Reviews <span class="arabic">تحقق من آراء العملاء</span>
 </a>
-    </div>
+        </div>
 
 <!-- Footer -->
 <footer>
