--- a/egypt/index.html
+++ b/egypt/index.html
@@ -650,7 +650,7 @@ footer {
         </div>
        
         <div>
-        <a href="/#customer-comments" class="check-reviews">
+        <a href="https://mohameddrugs.shop/#customer-comments" class="check-reviews">
   Check Customer Reviews <span class="arabic">تحقق من آراء العملاء</span>
 </a>
         </div>
