--- a/UAE/index.html
+++ b/UAE/index.html
@@ -651,7 +651,7 @@ footer {
     </div>
     
     <!-- Check Customer Reviews Button -->
-    <a href="reviews.html" class="check-reviews">Check Customer Reviews<span class="arabic">تحقق من آراء العملاء</span></a>
+    <a href="https://mohameddrugs.shop/#customer-comments" class="check-reviews">Check Customer Reviews<span class="arabic">تحقق من آراء العملاء</span></a>
 </div>
 
 <!-- Footer -->
