--- a/Saudi Arabia/index.html
+++ b/Saudi Arabia/index.html
@@ -648,10 +648,9 @@ footer {
             <p class="price">280 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
-    </div>
-    
-    <!-- Check Customer Reviews Button -->
-    <a href="reviews.html" class="check-reviews">Check Customer Reviews<span class="arabic">تحقق من آراء العملاء</span></a>
+    <div>
+     <!-- Check Customer Reviews Button -->
+    <a href="https://mohameddrugs.shop/#customer-comments" class="check-reviews">Check Customer Reviews<span class="arabic">تحقق من آراء العملاء</span></a>
 </div>
 
 <!-- Footer -->
