--- a/Saudi Arabia/index.html
+++ b/Saudi Arabia/index.html
@@ -483,8 +483,8 @@ footer {
 <div class="main-content">
     <!-- Page Heading with Arabic Translation -->
     <div class="page-heading">
-        <h2>All Products in Egypt</h2>
-        <p>جميع المنتجات في مصر</p>
+        <h2>All Products in Saudi Arabia</h2>
+        <p>جميع المنتجات في المملكة العربية السعودية</p>
     </div>
 
     <!-- Product Grid (16 Products) -->
