--- a/Qatar/index.html
+++ b/Qatar/index.html
@@ -483,11 +483,10 @@ footer {
 <div class="main-content">
     <!-- Page Heading with Arabic Translation -->
     <div class="page-heading">
-        <h2>All Products in Egypt</h2>
-        <p>جميع المنتجات في مصر</p>
-    </div>
-
-    <!-- Product Grid (16 Products) -->
+        <h2>All Products in Qatar</h2>
+        <p>جميع المنتجات في قطر</p>
+    
+        <!-- Product Grid (16 Products) -->
     <div class="product-grid">
         <!-- Product 1 -->
         <div class="product">
