--- a/Bahrain/index.html
+++ b/Bahrain/index.html
@@ -483,9 +483,8 @@ footer {
 <div class="main-content">
     <!-- Page Heading with Arabic Translation -->
     <div class="page-heading">
-        <h2>All Products in Egypt</h2>
-        <p>جميع المنتجات في مصر</p>
-    </div>
+        <h2>All Products in Qatar</h2>
+        <p>جميع المنتجات في قطر</p>
 
     <!-- Product Grid (16 Products) -->
     <div class="product-grid">
