--- a/Bahrain/index.html
+++ b/Bahrain/index.html
@@ -483,8 +483,8 @@ footer {
 <div class="main-content">
     <!-- Page Heading with Arabic Translation -->
     <div class="page-heading">
-        <h2>All Products in Qatar</h2>
-        <p>جميع المنتجات في قطر</p>
+        <h2>All Products in Bahrain</h2>
+        <p>جميع المنتجات في البحرين</p></p>
 
     <!-- Product Grid (16 Products) -->
     <div class="product-grid">
