--- a/egypt/index.html
+++ b/egypt/index.html
@@ -612,7 +612,7 @@ footer {
         <!-- Product 13 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/images/Ketamine.png" alt="Ketamine (كيتامين" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Ketamine.png" alt="Ketamine (كيتامين)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Ketamine (كيتامين</a>
             <p class="price">310 EGP</p>
@@ -622,9 +622,9 @@ footer {
         <!-- Product 14 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/images/Opium.png" alt="Opium (أفيون)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/vape.png" alt="vape (فيب)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Opium (أفيون)</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">vape (فيب)</a>
             <p class="price">240 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
