--- a/egypt/index.html
+++ b/egypt/index.html
@@ -622,7 +622,7 @@ footer {
         <!-- Product 14 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/images/vape.png" alt="vape (فيب)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/vape" alt="vape (فيب)" class="product-thumbnail">
             </a>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">vape (فيب)</a>
             <p class="price">240 EGP</p>
