--- a/egypt/index.html
+++ b/egypt/index.html
@@ -502,9 +502,9 @@ footer {
         <!-- Product 2 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/images/bango.png" alt="Bango (بانجو)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/Vape.jpg" alt="Vape (فيب)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Bango (بانجو)</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Vape (فيب)</a>
             <p class="price">400 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
@@ -619,17 +619,7 @@ footer {
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
         
-        <!-- Product 14 -->
-        <div class="product">
-            <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/images/vape" alt="vape (فيب)" class="product-thumbnail">
-            </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">vape (فيب)</a>
-            <p class="price">240 EGP</p>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
-        </div>
-        
-        <!-- Product 15 -->
+         <!-- Product 15 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
                 <img src="https://mohameddrugs.shop/images/Morphine.jpeg" alt="Morphine (مورفين)" class="product-thumbnail">
@@ -653,7 +643,7 @@ footer {
         <a href="https://mohameddrugs.shop/#customer-comments" class="check-reviews">
   Check Customer Reviews <span class="arabic">تحقق من آراء العملاء</span>
 </a>
-        </div>
+        </iv>
 
 <!-- Footer -->
 <footer>
