--- a/egypt/index.html
+++ b/egypt/index.html
@@ -552,9 +552,9 @@ footer {
         <!-- Product 7 -->
         <div class="product">
             <a href="https://wa.me/message/PH72PE5NPDR2P1">
-                <img src="https://mohameddrugs.shop/images/blotter paper.png" alt="LSD Blotter Paper (ورق)" class="product-thumbnail">
+                <img src="https://mohameddrugs.shop/images/blotter paper.png" alt="Paper,ID Card/A4 (ورق)" class="product-thumbnail">
             </a>
-            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">LSD Blotter Paper (ورق)</a>
+            <a href="https://wa.me/message/PH72PE5NPDR2P1" class="product-title">Paper,ID Card/A4 (ورق)</a>
             <p class="price">195 EGP</p>
             <a href="https://wa.me/message/PH72PE5NPDR2P1" class="add-to-cart">BUY NOW<span class="arabic">اشتري الآن</span></a>
         </div>
