--- a/Qatar/index.html
+++ b/Qatar/index.html
@@ -484,7 +484,7 @@ footer {
     <!-- Page Heading with Arabic Translation -->
     <div class="page-heading">
         <h2>All Products in Egypt</h2>
-        <p>جميع المنتجات في مصر</p>
+        <p>موقع الأشياء المتوفرة في قطر</p>
     </div>
 
     <!-- Product Grid (16 Products) -->
