--- a/Saudi Arabia/index.html
+++ b/Saudi Arabia/index.html
@@ -470,11 +470,10 @@ footer {
 <div class="main-content">
     <!-- Page Heading with Arabic Translation -->
     <div class="page-heading">
-        <h2>الموقع والتوصيل متاح في مصر</h2>
+        <h2> جميع المنتجات متوفرة في المملكة العربية السعودية </h2>
  </div>
 
-    <!-- Product Grid (16 Products) -->
-    <div class="product-grid">
+    <!-- Product Grid (16 Produc    <div class="product-grid">
         <!-- Product 1 -->
         <div class="product">
             <a href="https://wa.me/message/MLCSOMFIRENBB1">
