Update heading text for Oman page

--- a/Oman/index.html
+++ b/Oman/index.html
@@ -470,7 +470,7 @@ footer {
 <div class="main-content">
     <!-- Page Heading with Arabic Translation -->
     <div class="page-heading">
-        <h2>الموقع والتوصيل متاح في مصر</h2>
+        <h2> جميع المنتجات متوفرة في عمان </h2> 
  </div>
 
     <!-- Product Grid (16 Products) -->
