--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
         <!-- Hero Section -->
         <div class="hero-container">
             <div class="hero-text">
-                <i class="fas fa-shipping-fast"></i> أسرع توصيل في دول الخليج مع ضمان السلامة
+                <i class="fas fa-shipping-fast"></i>الموقع متاح في جميع دول الخليج مع الضمان
                 <div class="delivery-icons">
                     <i class="fas fa-truck"></i>
                     <i class="fas fa-box"></i>
